src/objects/EmailMessage.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Email Messages</relationshipLabel>
        <relationshipName>Email_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounts_ID__c</fullName>
        <externalId>true</externalId>
        <label>Accounts ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Email Messages</relationshipLabel>
        <relationshipName>Email_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contacts_ID__c</fullName>
        <externalId>true</externalId>
        <label>Contacts ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Email Messages</relationshipLabel>
        <relationshipName>Email_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leads_ID__c</fullName>
        <externalId>true</externalId>
        <label>Leads ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_Id__c</fullName>
        <externalId>true</externalId>
        <label>Notes Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunities_ID__c</fullName>
        <externalId>true</externalId>
        <label>Opportunities ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Email Messages</relationshipLabel>
        <relationshipName>Email_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Note_ID__c</fullName>
        <label>SFDC Note ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sugar_Created_Date__c</fullName>
        <label>Sugar Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sugar_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Sugar Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sugar_Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sugar Note</label>
        <referenceTo>Sugar_Note__c</referenceTo>
        <relationshipLabel>Email Messages</relationshipLabel>
        <relationshipName>Email_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Name__c</fullName>
        <label>To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>